Fix styles for the toolbar, hide overflow (#809)
Fixes #580

--- a/src/sidebar/static/scss/ckeditor.scss
+++ b/src/sidebar/static/scss/ckeditor.scss
@@ -30,10 +30,11 @@
   }
 
    .ck-editor__top {
-    flex: 40px;
-    flex-direction: column;
-    height: 40px;
     border-bottom: 1px solid #ccc;
+    flex-direction: column;
+    flex: 40px;
+    height: 40px;
+    overflow: hidden;
   }
 
   .ck-editor__main {
